--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,7 @@ body {
   font-family: sans-serif;
   line-height: 2.2;
   font-size: 0.875rem;
-  background-color: #55e378;
+  background-color: #344955;
 }
 ul {
   list-style-type: none;
@@ -19,7 +19,7 @@ a {
   text-decoration: none;
 }
 nav {
-  background: #3465ae;
+  background: #35374B;
   box-shadow: 0 5px 15px #00040a;
 }
 .menu a {
@@ -32,7 +32,7 @@ nav {
   transition: all 0.3s linear;
 }
 .menu a:hover {
-  color: #051520;
+  color: white;
   font-weight: bold;
   padding-left: 1.5rem;
 }
@@ -46,7 +46,7 @@ nav {
 h1 {
   font-size: 3rem;
   margin-bottom: 1rem;
-  color: #564fb7;
+  color: #574e95;
 }
 .nav-h1 {
   font-size: 1.5rem;
@@ -76,11 +76,11 @@ div {
   width: 42rem;
   border: 1px solid #eee;
   padding: 1rem;
-  background-color: #35374B;
-  color: #fff;
+  background-color: #50727B;
+  color: #0a0202;
   text-align: center;
   border-radius: 5px;
-  box-shadow: 0 5px 15px #35374B;
+  box-shadow: 0 5px 15px #4c4f71;
 }
 .counter-div>* {
   margin-bottom: 2rem;
